config_kornwal/iptables-save
# Generated by iptables-save v1.4.21 on Mon Dec 14 12:56:46 2015
*raw
:PREROUTING ACCEPT [4:336]
:OUTPUT ACCEPT [6:504]
COMMIT
# Completed on Mon Dec 14 12:56:46 2015
# Generated by iptables-save v1.4.21 on Mon Dec 14 12:56:46 2015
*mangle
:PREROUTING ACCEPT [4:336]
:INPUT ACCEPT [4:336]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6:504]
:POSTROUTING ACCEPT [4:336]
COMMIT
# Completed on Mon Dec 14 12:56:46 2015
# Generated by iptables-save v1.4.21 on Mon Dec 14 12:56:46 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [3:252]
:POSTROUTING ACCEPT [1:84]
COMMIT
# Completed on Mon Dec 14 12:56:46 2015
# Generated by iptables-save v1.4.21 on Mon Dec 14 12:56:46 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:icmp_packets_in - [0:0]
:icmp_packets_out - [0:0]
:tcp_packets_in - [0:0]
:tcp_packets_out - [0:0]
:udp_packets_in - [0:0]
:udp_packets_out - [0:0]
-A INPUT -m state --state INVALID -j LOG --log-prefix "dropped INVALID IN: "
-A INPUT -m state --state INVALID -j DROP
-A INPUT -d 192.168.0.14/32 -p tcp -j tcp_packets_in
-A INPUT -d 192.168.0.14/32 -p udp -j udp_packets_in
-A INPUT -d 192.168.0.14/32 -p icmp -j icmp_packets_in
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -i lo -j ACCEPT
-A INPUT -s 192.168.0.0/16 -d 192.168.0.255/32 -p udp -j ACCEPT
-A INPUT -j LOG --log-prefix "dropped IN: "
-A INPUT -j DROP
-A OUTPUT -m state --state INVALID -j LOG --log-prefix "dropped INVALID OUT: "
-A OUTPUT -m state --state INVALID -j DROP
-A OUTPUT -s 192.168.0.14/32 -p tcp -j tcp_packets_out
-A OUTPUT -s 192.168.0.14/32 -p udp -j udp_packets_out
-A OUTPUT -s 192.168.0.14/32 -p icmp -j icmp_packets_out
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -o lo -j ACCEPT
-A OUTPUT -s 192.168.0.14/32 -d 192.168.0.255/32 -p udp -j ACCEPT
-A OUTPUT -j LOG --log-prefix "dropped OUT: "
-A OUTPUT -j DROP
-A icmp_packets_in -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A icmp_packets_in -p icmp -m icmp --icmp-type 4 -j LOG --log-prefix "received source quench"
-A icmp_packets_in -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A icmp_packets_in -j LOG --log-prefix "dropped IN ICMP: "
-A icmp_packets_in -j DROP
-A icmp_packets_out -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A icmp_packets_out -j LOG --log-prefix "dropped OUT ICMP: "
-A icmp_packets_out -j DROP
-A tcp_packets_in -d 192.168.0.14/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A tcp_packets_in -d 192.168.0.14/32 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
-A tcp_packets_in -d 192.168.0.14/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A tcp_packets_in -d 192.168.0.14/32 -p tcp -m tcp --sport 1023:65535 --dport 1023:65535 -m state --state ESTABLISHED -j ACCEPT
-A tcp_packets_in -j LOG --log-prefix "dropped IN TCP: "
-A tcp_packets_in -j DROP
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --dport 80 -m state --state ESTABLISHED -j ACCEPT
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --dport 80 --tcp-flags SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --dport 443 -m state --state ESTABLISHED -j ACCEPT
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --dport 443 --tcp-flags SYN,RST,ACK SYN -m state --state NEW -j LOG --log-prefix "new HTTPS: "
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --dport 443 --tcp-flags SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --dport 21 -m state --state ESTABLISHED -j ACCEPT
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --dport 21 --tcp-flags SYN,RST,ACK SYN -m state --state NEW -j LOG --log-prefix "new FTP connection  "
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --dport 21 --tcp-flags SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --sport 1023:65535 --dport 1023:65535 --tcp-flags SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A tcp_packets_out -s 192.168.0.14/32 -p tcp -m tcp --sport 1023:65535 --dport 1023:65535 -m state --state ESTABLISHED -j ACCEPT
-A tcp_packets_out -j LOG --log-prefix "dropped OUT TCP: "
-A tcp_packets_out -j DROP
-A udp_packets_in -s 8.8.8.8/32 -d 192.168.0.14/32 -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A udp_packets_in -s 8.8.4.4/32 -d 192.168.0.14/32 -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A udp_packets_in -j LOG --log-prefix "dropped IN UDP: "
-A udp_packets_in -j DROP
-A udp_packets_out -s 192.168.0.14/32 -d 8.8.8.8/32 -p udp -m udp --dport 53 -m state --state ESTABLISHED -j ACCEPT
-A udp_packets_out -s 192.168.0.14/32 -d 8.8.8.8/32 -p udp -m udp --dport 53 -m state --state NEW -j LOG --log-prefix "new connection to DNS  "
-A udp_packets_out -s 192.168.0.14/32 -d 8.8.8.8/32 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A udp_packets_out -s 192.168.0.14/32 -d 8.8.4.4/32 -p udp -m udp --dport 53 -m state --state ESTABLISHED -j ACCEPT
-A udp_packets_out -s 192.168.0.14/32 -d 8.8.4.4/32 -p udp -m udp --dport 53 -m state --state NEW -j LOG --log-prefix "new connection to DNS  "
-A udp_packets_out -s 192.168.0.14/32 -d 8.8.4.4/32 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A udp_packets_out -j LOG --log-prefix "dropped OUT UDP: "
-A udp_packets_out -j DROP
COMMIT
# Completed on Mon Dec 14 12:56:46 2015
